--- a/peru.yaml
+++ b/peru.yaml
@@ -1,5 +1,5 @@
 imports:
-  lighttouch-libs: lighttouch-libs/
+  lighttouch-base: lighttouch-base/
   
-git module lighttouch-libs:
-  url: https://github.com/foundpatterns/lighttouch-libs.git
+git module lighttouch-base:
+  url: https://github.com/foundpatterns/lighttouch-base.git
