--- a/Settings.toml
+++ b/Settings.toml
@@ -10,7 +10,7 @@ ext_header_ids = 1
 strict = 1 # https://github.com/chyh1990/yaml-rust/issues/102
 
 # ?
-lua_prelude = "lighttouch-libs/"
+lua_prelude = "lighttouch-base/"
 templates_path = "templates/**/*"  # expected by lib.rs
 
 # package builder bootstrapping phase
